--- a/app/frontend/frontend/src/index.css
+++ b/app/frontend/frontend/src/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.blob {
+	border-radius: 50%;
+	box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+	margin: 10px;
+	transform: scale(1);
+	animation: pulse-black 1.5s infinite;
+}
+
+@keyframes pulse-black {
+	0% {
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+	}
+	
+	70% {
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+	
+	100% {
+
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
